--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -226,9 +226,9 @@
                         </div>
 
                         <div style="display: flex; flex-direction: column; gap: 5px; width: 100%;">
-                            <a href="/rewards" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "Rewards", "Footer")</a>
-                            <a href="/last-added" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "LastAdded", "Footer")</a>
+                            <a href="/patreon" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "Patreon", "Footer")</a>
                             <a href="/api" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "Api", "Footer")</a>
+                            <a href="/last-added" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "LastAdded", "Footer")</a>
                             <a href="/cost-web" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "CostWeb", "Footer")</a>
                         </div>
                     </div>
