--- a/pepeizqs deals web/Pages/Componentes/Cuenta/Correo.razor
+++ b/pepeizqs deals web/Pages/Componentes/Cuenta/Correo.razor
@@ -1,9 +1,9 @@
-﻿@using Microsoft.AspNetCore.Components.Web;
-@using Microsoft.AspNetCore.Identity;
-@using Microsoft.AspNetCore.WebUtilities;
-@using pepeizqs_deals_web.Areas.Identity.Data;
-@using System.Text;
-@using System.Text.Encodings.Web;
+﻿@using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Identity
+@using Microsoft.AspNetCore.WebUtilities
+@using pepeizqs_deals_web.Areas.Identity.Data
+@using System.Text
+@using System.Text.Encodings.Web
 
 @inject UserManager<Usuario> UserManager
 @inject IHttpContextAccessor HttpContextAccessor
