--- a/pepeizqs deals web/Pages/Componentes/Secciones/Noticia.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Noticia.razor
@@ -182,7 +182,7 @@
 							{
 								var gratis = BaseDatos.Gratis.Buscar.UnJuego(int.Parse(id), null);
 
-								<a href="@Herramientas.EnlaceAcortador.Generar(gratis.Enlace, gratis.Tipo)" class="boton-pequeño" style="padding: 2px;" target="_blank">
+								<a href="@Herramientas.EnlaceAcortador.Generar(gratis.Enlace, gratis.Tipo, usuarioPatreon)" class="boton-pequeño" style="padding: 2px;" target="_blank">
 									<div>
 										<img src="@gratis.Imagen" style="max-width: 100%; max-height: 100%;" alt="@gratis.Nombre" />
 									</div>
@@ -242,7 +242,7 @@
 								{
 									var juego = BaseDatos.Juegos.Buscar.UnJuego(suscripcion.JuegoId);
 
-									<a href="@Herramientas.EnlaceAcortador.Generar(suscripcion.Enlace, suscripcion.Tipo)" class="boton-pequeño" style="padding: 2px;" target="_blank">
+									<a href="@Herramientas.EnlaceAcortador.Generar(suscripcion.Enlace, suscripcion.Tipo, usuarioPatreon)" class="boton-pequeño" style="padding: 2px;" target="_blank">
 										<div>
 											<img src="@juego.Imagenes.Library_600x900" style="max-width: 100%; max-height: 100%;" alt="@juego.Nombre" />
 										</div>
@@ -305,6 +305,7 @@
 	public string usuarioId { get; set; }
 
 	private Usuario usuario = new Usuario();
+	private bool usuarioPatreon = false;
 
 	[Parameter]
 	public int noticiaId { get; set; }
@@ -329,6 +330,11 @@
 	protected override async Task OnInitializedAsync()
 	{
 		usuario = await UserManager.FindByIdAsync(usuarioId);
+
+		if (usuario != null)
+		{
+			usuarioPatreon = Herramientas.Patreon.VerificarComprobacion(usuario.PatreonLastCheck);
+		}
 
 		if (noticiaId > 0)
 		{
